--- a/test/config/perturb_seq.yaml
+++ b/test/config/perturb_seq.yaml
@@ -65,6 +65,7 @@ debug-config-2layers-finetune:
         op_weights: !!python/tuple [2,1,1]
         #weighted_vocab_file: examples/data/mini-vocab-weighted.en
         use_word_sim: True
+        prefer_shorter: True
       trg_reader: !PlainTextReader {}
       max_src_len: 15
       max_trg_len: 15
